@@ -576,9 +576,9 @@ meta_frame_layout_calc_geometry (const MetaFrameLayout  *layout,
   while (i < n_left)
     {
       if (i == 0) /* prefer left background if only one button */
-        left_bg_rects[i] = &fgeom->left_right_background;
-      else if (i == (n_left - 1))
         left_bg_rects[i] = &fgeom->left_left_background;
+      else if (i == (n_left - 1))
+        left_bg_rects[i] = &fgeom->left_right_background;
       else
         left_bg_rects[i] = &fgeom->left_middle_backgrounds[i-1];
 
@@ -589,9 +589,9 @@ meta_frame_layout_calc_geometry (const MetaFrameLayout  *layout,
   while (i < n_right)
     {
       if (i == (n_right - 1)) /* prefer right background if only one button */
-        right_bg_rects[i] = &fgeom->right_left_background;
-      else if (i == 0)
         right_bg_rects[i] = &fgeom->right_right_background;
+      else if (i == 0)
+        right_bg_rects[i] = &fgeom->right_left_background;
       else
         right_bg_rects[i] = &fgeom->right_middle_backgrounds[i-1];
 
